--- a/.github/workflows/badges.yml
+++ b/.github/workflows/badges.yml
@@ -1,8 +1,9 @@
 name: Update badges
 
 on:
-  schedule:
-    - cron: "0 1 * * *"
+  push:
+    branches:
+      - main
 jobs:
   update-readme:
     name: Update Readme with badges
